# BrowseComp-Plus

./: pyproject.toml
scripts_evaluation/: evaluate_run.py
search_agent/: lfm_client.py  prompts.py  run.py  vllm_client.py
searcher/searchers/: __init__.py  faiss_searcher.py
